--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "SrAutoDatabase": "Server=DESKTOP-1JKELO7\\SQLEXPRESS;Database=DB_SRAUTO;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
